# libQuestMR

./: CMakeLists.txt  README.md  buildWithDeps.sh  config.sh
.github/workflows/: build_check.yml  build_check_dev.yml
demo/: CMakeLists.txt  RPCam_helper.cpp  RPCam_helper.h  calibration_helper.cpp  calibration_helper.h  demo-calibrateCameraExtrinsic-RPCam.cpp  demo-calibrateCameraFull-RPCam.cpp  demo-calibrateCameraIntrinsic-RPCam.cpp  demo-calibrateCameraIntrinsic-cv.cpp  demo-calibrateCameraIntrinsic.cpp  demo-capture-RPCam.cpp  demo-capture.cpp  demo-captureRaw-RPCam.cpp  demo-chromakey-RPCam.cpp  demo-connectToMRC-raw.cpp  demo-connectToMRC.cpp  demo-loadAndUploadQuestCalib.cpp  demo-loadQuestCalib.cpp  demo-playback.cpp  demo-processRawCapture.cpp  demo-processRawCaptureAudio.cpp  demo-segmentation-RPCam.cpp  demo-testCalib-RPCam.cpp  demo-uploadQuestCalib.cpp  main.cpp
include/: BufferedSocket.h  QuestCommunicator.h  QuestVideoMngr.h  frame.h  log.h
include/libQuestMR/: BackgroundSubtractor.h  PortableTypes.h  QuestCalibData.h  QuestCommunicator.h  QuestFrameData.h  QuestStringUtil.h  QuestVideoMngr.h  QuestVideoTimestampRectifier.h  config.h  frame.h  log.h
src/: BackgroundSubtractor.cpp  BackgroundSubtractorChromaKey.cpp  BackgroundSubtractorOpenCV.cpp  BackgroundSubtractorRobustVideoMattingONNX.cpp  BufferedSocket.cpp  PortableTypes.cpp  QuestCalibData.cpp  QuestCommunicator.cpp  QuestFrameData.cpp  QuestStringUtil.cpp  QuestVideoMngr.cpp  QuestVideoTimestampRectifier.cpp  frame.cpp  frame.h  log.h
