cmake_minimum_required(VERSION 3.11.0)
project(libQuestMR_demo VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_DEBUG_POSTFIX "d")

find_package(BufferedSocket REQUIRED)
message("BufferedSocket dir: ${BufferedSocket_DIR}")
set(BufferedSocket_INCLUDE_DIR ${BufferedSocket_DIR}/../../../include)
include_directories(${BufferedSocket_INCLUDE_DIR})

find_package(libQuestMR REQUIRED)
message("libQuestMR dir: ${libQuestMR_DIR}")
set(libQuestMR_INCLUDE_DIR ${libQuestMR_DIR}/../../../include)
include_directories(${libQuestMR_INCLUDE_DIR} ${libQuestMR_INCLUDE_DIR})

option(USE_RPCameraInterface "Use RPCameraInterface" ON)
option(USE_DEPTHAI "Use DepthAI" OFF)

if(USE_DEPTHAI)
	find_package(depthai CONFIG REQUIRED)
endif()

find_package(OpenCV REQUIRED video dnn calib3d highgui)

if(USE_RPCameraInterface)
	find_package(RPCameraInterface REQUIRED)
	message("RPCameraInterface include dir: ${RPCameraInterface_DIR}")
	set(RPCameraInterface_INCLUDE_DIR ${RPCameraInterface_DIR}/../../../include)
	include_directories(${RPCameraInterface_INCLUDE_DIR})
endif()

include_directories(${BufferedSocket})

add_executable(libQuestMRDemo-connectToMRC demo-connectToMRC.cpp)
add_executable(libQuestMRDemo-connectToMRC-raw demo-connectToMRC-raw.cpp)
add_executable(libQuestMRDemo-capture demo-capture.cpp)
add_executable(libQuestMRDemo-playback demo-playback.cpp)
add_executable(libQuestMRDemo-loadQuestCalib demo-loadQuestCalib.cpp)
add_executable(libQuestMRDemo-loadAndUploadQuestCalib demo-loadAndUploadQuestCalib.cpp)
add_executable(libQuestMRDemo-uploadQuestCalib demo-uploadQuestCalib.cpp)
add_executable(libQuestMRDemo-calibrateCameraIntrinsic-cv demo-calibrateCameraIntrinsic-cv.cpp calibration_helper.h calibration_helper.cpp)
if(USE_RPCameraInterface)
	add_executable(libQuestMRDemo-calibrateCameraIntrinsic-RPCam demo-calibrateCameraIntrinsic-RPCam.cpp calibration_helper.h calibration_helper.cpp)
	add_executable(libQuestMRDemo-calibrateCameraExtrinsic-RPCam demo-calibrateCameraExtrinsic-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-calibrateCameraFull-RPCam demo-calibrateCameraFull-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-testCalib-RPCam demo-testCalib-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-capture-RPCam demo-capture-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-captureRaw-RPCam demo-captureRaw-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-processRawCapture demo-processRawCapture.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-processRawCaptureAudio demo-processRawCaptureAudio.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-chromakey-RPCam demo-chromakey-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
	add_executable(libQuestMRDemo-segmentation-RPCam demo-segmentation-RPCam.cpp RPCam_helper.h RPCam_helper.cpp)
endif()

target_link_libraries(libQuestMRDemo-connectToMRC PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-connectToMRC LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-connectToMRC-raw PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-connectToMRC-raw LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-capture PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-capture LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-playback PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-playback LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-loadQuestCalib PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-loadQuestCalib LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-loadAndUploadQuestCalib PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-loadAndUploadQuestCalib LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-uploadQuestCalib PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-uploadQuestCalib LINK_PUBLIC libQuestMR BufferedSocket)
target_link_libraries(libQuestMRDemo-calibrateCameraIntrinsic-cv PRIVATE ${OpenCV_LIBS})
target_link_libraries(libQuestMRDemo-calibrateCameraIntrinsic-cv LINK_PUBLIC libQuestMR BufferedSocket)
if(USE_RPCameraInterface)
	target_link_libraries(libQuestMRDemo-calibrateCameraIntrinsic-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-calibrateCameraIntrinsic-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-calibrateCameraExtrinsic-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-calibrateCameraExtrinsic-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-calibrateCameraFull-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-calibrateCameraFull-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-testCalib-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-testCalib-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-capture-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-capture-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-captureRaw-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-captureRaw-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-processRawCapture PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-processRawCapture LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-processRawCaptureAudio PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-processRawCaptureAudio LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-chromakey-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-chromakey-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
	target_link_libraries(libQuestMRDemo-segmentation-RPCam PRIVATE ${OpenCV_LIBS})
	target_link_libraries(libQuestMRDemo-segmentation-RPCam LINK_PUBLIC libQuestMR BufferedSocket RPCameraInterface)
endif()

install(TARGETS libQuestMRDemo-connectToMRC RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-connectToMRC-raw RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-capture RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-playback RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-loadQuestCalib RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-loadAndUploadQuestCalib RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-uploadQuestCalib RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-calibrateCameraIntrinsic-cv RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-calibrateCameraIntrinsic-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-calibrateCameraExtrinsic-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-calibrateCameraFull-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-testCalib-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-capture-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-captureRaw-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-processRawCapture RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-processRawCaptureAudio RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-chromakey-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS libQuestMRDemo-segmentation-RPCam RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})


if(NOT MSVC)
	set(CMAKE_THREAD_LIBS_INIT "-lpthread")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
endif()
set(CMAKE_HAVE_THREADS_LIBRARY 1)
set(CMAKE_USE_WIN32_THREADS_INIT 0)
set(CMAKE_USE_PTHREADS_INIT 1)
set(THREADS_PREFER_PTHREAD_FLAG ON)


